@@ -1,4 +1,5 @@
 - added label argument for tap()
+- better formatted call signatures in debug utilities
 - exposed @wraps and unwrap()
 - slightly optimized last() and nth()
 
